style: add NAV price to movers card meta and fix layout squishing on mobile

--- a/style.css
+++ b/style.css
@@ -524,7 +524,8 @@ body {
 }
 
 .m-fund-info {
-    max-width: 70%;
+    flex: 1;
+    min-width: 0;
 }
 
 .m-fund-name {
@@ -555,7 +556,9 @@ body {
 }
 
 .m-fund-yield {
+    flex-shrink: 0;
     text-align: right;
+    min-width: 100px;
 }
 
 .m-yield-val {
